# PDReadoutV26Test

./: CMakeLists.txt  README.md
include/altair/: ads124s08.hpp  cli.hpp  config_cmd.hpp  consteval_utils.hpp  dac5311.hpp  integrator.hpp  pins.hpp
include/altair/impl/: ads124s08_impl.hpp  dac5311_impl.hpp  integrator_impl.hpp
src/: cli.cpp  config_cmd.cpp  main.cpp  pins.cpp
